[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scheduler"
dynamic = ["readme", "version"]
authors = [
    { name = "Fabian A. Preiss", email = "fpreiss@digon.io" },
    { name = "Jendrik A. Potyka", email = "jpotyka@digon.io" },
]
maintainers = [
    { name = "Fabian A. Preiss", email = "fpreiss@digon.io" },
    { name = "Jendrik A. Potyka", email = "jpotyka@digon.io" },
]
description = "A simple in-process python scheduler library with asyncio, threading and timezone support."
license = { text = "LGPLv3" }
keywords = [
    "scheduler",
    "schedule",
    "asyncio",
    "threading",
    "datetime",
    "date",
    "time",
    "timedelta",
    "timezone",
    "timing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = ["typeguard>=3.0.0"]


[project.urls]
Repository = "https://gitlab.com/DigonIO/scheduler"
Documentation = "https://digon.io/hyd/project/scheduler/t/master"
Changelog = "https://gitlab.com/DigonIO/scheduler/-/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://gitlab.com/DigonIO/scheduler/-/issues"

[tool.setuptools.dynamic]
version = { attr = "scheduler.__version__" }
readme = { file = "README.md", content-type = "text/markdown" }


[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
py_version = 312
profile = "black"

[tool.pydocstyle]
convention = "numpy"
add-ignore = ["D105"]

[tool.mypy]
python_version = "3.9"
# strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
